--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "express-bare-bones",
+  "name": "agent-assist-livechat-server-leopard",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "cross-env": "^6.0.3",
-    "express": "^4.16.2",
+    "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
     "livechatapi": "^0.6.0",
     "lodash": "^4.17.15",
-    "morgan": "^1.9.0",
-    "winston": "^2.4.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.2.1"
   }
 }
